# vocabulary-drills

./: README.md  .env.sample  .gitignore  README.md
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
client/src/api/: api.type.ts  axiosInstance.ts  endpoint.ts
client/src/components/: Header.tsx  Title.tsx
client/src/components/ui/: radio-group.tsx
client/src/hooks/: useFeedbackParams.ts  useGenerateFeedback.ts  useGenerateSentence.ts
client/src/pages/: Home.tsx
client/src/pages/Home/: GenerateSentence.tsx  Home.tsx  SentenceFeedback.tsx
server/: .pre-commit-config.yaml  Makefile  pyproject.toml
server/app/: main.py
server/app/api/sentence/: endpoint.py  schema.py  service.py
