[tool.poetry]
name = "vocabulary-drills"
version = "0.0.0"
description = ""
authors = ["Suyeon Kang <suyeon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pre-commit = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["requests", "fastapi"]
multi_line_output = 3

[tool.poetry.scripts]
format = "bash -c 'isort . && black .'"
start = "uvicorn app.main:app --port 8080 --reload"
