[tool.poetry]
name = "server"
version = "0.1.0"
description = "vocabulary drills server"
authors = ["Suyeon Kang <suyeon.dev@gmail.com>"]
license = "MIT"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pre-commit = "^4.1.0"
openai = "^1.60.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["requests", "fastapi"]
multi_line_output = 3
